hhvm/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: hhvm
spec:
  to:
    kind: Service
    name: hhvm
